@@ -22,6 +22,7 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.util.UrlPathHelper;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -50,12 +51,14 @@ public class SecurityConfig {
 
                 if (path.equals("/") ||
                         path.equals("/index.html") ||
-                        path.equals("/login.html") ||
-                        path.equals("/register.html") ||
-                        path.endsWith(".js") ||
-                        path.endsWith(".css") ||
                         path.startsWith("/api/szebi/login") ||
-                        path.startsWith("/api/szebi/register")) {
+                        path.startsWith("/api/szebi/register") ||
+                        path.startsWith("/api/analysis") ||
+                        path.startsWith("/api/control") ||
+                        path.startsWith("/api/data/simulation") ||
+                        path.startsWith("/api/data") ||
+                        path.endsWith(".js") ||
+                        path.endsWith(".css")) {
 
                     chain.doFilter(req, res);
                     return;
@@ -92,26 +95,19 @@ public class SecurityConfig {
         };
 
         return http
-                .csrf(csrf -> csrf.disable())
+                .csrf(csrf -> csrf.disable()) // Wyłączenie CSRF jest niezbędne dla POST z Reacta
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/", "/index.html", "/login.html", "/register.html",
-                                "/script.js", "/auth.js", "/styles.css",
-                                "/js/**", "/css/**", "/images/**",
-                                "/api/chat/files/**"
-                        ).permitAll()
+                        .requestMatchers("/", "/index.html", "/login.html", "/register.html", "/js/**", "/css/**", "/images/**").permitAll()
                         .requestMatchers("/api/szebi/login", "/api/szebi/register").permitAll()
+                        .requestMatchers("/api/analysis/**").permitAll()
+                        .requestMatchers("/api/control/**").permitAll()
+                        .requestMatchers("/api/data/simulation/**").permitAll() // Musi być PRZED /api/data/**
+                        .requestMatchers("/api/data/**").permitAll()
                         .requestMatchers("/api/chat/addUser", "/api/chat/create").hasAuthority("ROLE_ADMIN")
                         .requestMatchers("/chat/**", "/api/chat/**").authenticated()
-                        .requestMatchers("/api/chat/files/**").permitAll()
-                        .requestMatchers("/api/data/**").authenticated()
-                        .requestMatchers("/api/control/**").permitAll()
-                        .requestMatchers("/api/optimization/**").permitAll()
-                        .requestMatchers("/api/alerts/**", "/api/admin/alerts/**").permitAll()
-                        .requestMatchers("/error").permitAll()
-                        .anyRequest().denyAll()
+                        .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
@@ -125,16 +121,15 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Zezwól na wszystkie źródła
+        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*")); // Zezwól na wszystkie nagłówki
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // Udostępnij nagłówki
-        configuration.setAllowCredentials(false); // Nie używamy credentials (cookies) przy "*" origins
-        configuration.setMaxAge(3600L); // Cache preflight requests przez 1 godzinę
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowCredentials(false);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Zastosuj do wszystkich ścieżek
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
-
